<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/id_checkin_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/attendance_shape"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/id_checkin_date_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:text="2017-05-01 周一"
                android:textColor="@color/colorWhite"
                android:textSize="13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/id_checkin_date_tv"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/str_attendance"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/id_look_checkin_record_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/str_look_checkin_record"
            android:textColor="@color/colorTheme" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/id_yesterday_task_num_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="0"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/id_today_task_num_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text= "0"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/id_unfinished_task_num_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="0"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/str_yesterday_task_num"
            android:textColor="@color/colorTextHint"
            android:textSize="@dimen/small_title_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/str_today_task_num"
            android:textColor="@color/colorTextHint"
            android:textSize="@dimen/small_title_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/str_unfinished_task_num"
            android:textColor="@color/colorTextHint"
            android:textSize="@dimen/small_title_size" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:text="@string/str_select_picture_num"
        android:textSize="@dimen/small_title_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center_horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/id_times_10_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/label_button_selector"
            android:clickable="true"
            android:text="@string/str_times_10"
            android:textColor="@color/colorTheme" />

        <TextView
            android:id="@+id/id_times_20_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@drawable/label_button_selector"
            android:clickable="true"
            android:text="@string/str_times_20"
            android:textColor="@color/colorTheme" />

        <TextView
            android:id="@+id/id_times_30_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@drawable/label_button_selector"
            android:clickable="true"
            android:text="@string/str_times_30"
            android:textColor="@color/colorTheme" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/id_start_task_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_state_2_selector"
            android:text="@string/str_start_task"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/button_text_size" />
    </FrameLayout>


</LinearLayout>
