<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorBg">
    <TextView
        android:id="@+id/id_identify_img_from_album_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_item_bg_selector"
        android:padding="15dp"
        android:drawableEnd="@drawable/ic_left_arrow"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size"
        android:clickable="true"
        android:text="@string/str_identify_img_from_album"/>
    <TextView
        android:id="@+id/id_identify_from_camera_realtime_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_item_bg_selector"
        android:padding="15dp"
        android:layout_marginTop="1dp"
        android:drawableEnd="@drawable/ic_left_arrow"
        android:textColor="@color/colorBlack"
        android:clickable="true"
        android:textSize="@dimen/text_size"
        android:text="@string/str_identify_from_camera_realtime"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="1dp"
        android:textColor="@color/colorTextHint"
        android:textSize="@dimen/toast_text_size"
        android:text="@string/str_toast_update_model_file"/>
</LinearLayout>