<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg">
    <TextView
        android:id="@+id/id_modify_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_item_bg_selector"
        android:padding="15dp"
        android:drawableRight="@drawable/ic_left_arrow"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size"
        android:clickable="true"
        android:text="@string/str_modify_user_info"/>
    <TextView
        android:id="@+id/id_modify_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_item_bg_selector"
        android:padding="15dp"
        android:layout_marginTop="1dp"
        android:drawableRight="@drawable/ic_left_arrow"
        android:textColor="@color/colorBlack"
        android:clickable="true"
        android:textSize="@dimen/text_size"
        android:text="@string/str_modify_user_password"/>
    <TextView
        android:id="@+id/id_exit_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_item_bg_selector"
        android:padding="15dp"
        android:layout_marginTop="3dp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size"
        android:gravity="center_horizontal"
        android:clickable="true"
        android:text="@string/str_exit_login"/>
</LinearLayout>