<?xml version="1.0" encoding="utf-8"?>
<cn.codekong.imageclassificationsystemclient.customizeview.NoTouchScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorBg">
        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/top_show_text_height"
            android:text="@string/str_current_progress"
            android:padding="@dimen/label_text_padding"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/id_tag_progress_tv"
            android:layout_width="0dp"
            android:layout_height="@dimen/top_show_text_height"
            android:padding="@dimen/label_text_padding"
            android:gravity="end"
            android:layout_weight="1"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/id_taging_imageview"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:layout_gravity="center"
        android:layout_margin="@dimen/button_margin_lr"
        android:scaleType="centerCrop"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_show_text_height"
        android:padding="@dimen/label_text_padding"
        android:text="@string/str_option_tag"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/dividing_line_margin_top"
        android:layout_marginLeft="@dimen/dividing_line_margin_top"
        android:background="@color/colorDivider"
        android:layout_height="0.5dp" />
    <GridView
        android:id="@+id/id_option_tag_gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="4"
        android:gravity="center_horizontal"
        android:scrollbars="none"
        android:stretchMode="columnWidth"
        android:horizontalSpacing="@dimen/label_spacing_size"
        android:verticalSpacing="@dimen/label_spacing_size"
        android:layout_margin="@dimen/label_spacing_size">
    </GridView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:padding="@dimen/label_text_padding"
        android:text="@string/str_me_input_tag"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/dividing_line_margin_top"
        android:layout_marginLeft="@dimen/dividing_line_margin_top"
        android:background="@color/colorDivider"
        android:layout_height="0.5dp" />
    <GridView
        android:id="@+id/id_manual_tag_gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="4"
        android:gravity="center_horizontal"
        android:scrollbars="none"
        android:stretchMode="columnWidth"
        android:horizontalSpacing="@dimen/label_spacing_size"
        android:verticalSpacing="@dimen/label_spacing_size"
        android:layout_margin="@dimen/label_spacing_size">
    </GridView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/id_input_tag_ed"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittext_height"
            android:layout_weight="5"
            android:layout_marginLeft="10dp"
            android:maxLines="1"
            android:maxLength="6"
            android:textSize="@dimen/hint_text_size"
            android:hint="@string/str_please_input_your_tag"/>
        <Button
            android:id="@+id/id_confirm_tag_btn"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:textSize="13dp"
            android:background="@drawable/button_state_3_selector"
            android:textColor="@color/colorWhite"
            android:text="@string/str_sure"/>
    </LinearLayout>
</LinearLayout>
</cn.codekong.imageclassificationsystemclient.customizeview.NoTouchScrollView>
