<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ioniconview="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <be.webelite.ion.IconView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ioniconview:name="ion_ios7_person_outline"
            android:textSize="30dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/colorTheme2"/>
        <EditText
            android:id="@+id/id_login_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:maxLength="11"
            android:inputType="number"
            android:textSize="@dimen/hint_text_size"
            android:textColorHint="@color/colorTextHint"
            android:hint="@string/str_input_username"/>
    </LinearLayout>
    <!--分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorDivider"
        android:layout_height="0.5dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <be.webelite.ion.IconView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ioniconview:name="ion_ios7_unlocked_outline"
            android:textSize="25dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/colorTheme2"/>
        <EditText
            android:id="@+id/id_login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="@string/str_input_password"
            android:textSize="@dimen/hint_text_size"
            android:textColorHint="@color/colorTextHint" />
    </LinearLayout>
    <!--分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorDivider"
        android:layout_marginTop="15dp"
        android:layout_height="0.5dp" />
    <Button
        android:id="@+id/id_login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_state_2_selector"
        android:text="@string/str_login"
        android:textSize="@dimen/button_text_size"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/id_login_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/hint_text_size"
        android:gravity="center"
        android:textColor="@color/colorTheme"
        android:text="@string/str_login_forget_password"/>
</LinearLayout>