<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ioniconview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/id_tab_home"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:divider="@color/colorTextHint"
        android:orientation="vertical">
        <be.webelite.ion.IconView
            android:id="@+id/id_tab_home_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ioniconview:name="ion_home"
            android:textSize="25dp"
            android:textColor="@color/colorTheme2"/>
        <TextView
            android:id="@+id/id_tab_home_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tab_text_size"
            android:textColor="@color/colorTheme2"
            android:text="@string/str_tab_home"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/id_tab_task"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <be.webelite.ion.IconView
            android:id="@+id/id_tab_task_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ioniconview:name="ion_social_dropbox"
            android:textSize="25dp"
            android:textColor="@color/colorTextHint"/>
        <TextView
            android:id="@+id/id_tab_task_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tab_text_size"
            android:textColor="@color/colorTextHint"
            android:text="@string/str_tab_task"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/id_tab_rank"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <be.webelite.ion.IconView
            android:id="@+id/id_tab_rank_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ioniconview:name="ion_stats_bars"
            android:textSize="25dp"
            android:textColor="@color/colorTextHint"/>
        <TextView
            android:id="@+id/id_tab_rank_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tab_text_size"
            android:textColor="@color/colorTextHint"
            android:text="@string/str_tab_rank"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/id_tab_me"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <be.webelite.ion.IconView
            android:id="@+id/id_tab_me_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ioniconview:name="ion_person"
            android:textSize="25dp"
            android:textColor="@color/colorTextHint"/>
        <TextView
            android:id="@+id/id_tab_me_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tab_text_size"
            android:textColor="@color/colorTextHint"
            android:text="@string/str_tab_me"/>
    </LinearLayout>
</LinearLayout>
