<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_item_bg_selector"
        android:clickable="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_item_bg_selector"
            android:padding="15dp"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size"
            android:text="@string/str_modify_avatar"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_user_default_avatar"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/text_item_bg_selector"
        android:clickable="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size"
            android:text="@string/str_username"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorTextHint"
            android:textSize="@dimen/hint_text_size"
            android:text="pyh"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/text_item_bg_selector"
        android:clickable="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size"
            android:text="@string/str_sex"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorTextHint"
            android:textSize="@dimen/hint_text_size"
            android:text="女"/>
    </RelativeLayout>

</LinearLayout>